[gd_scene load_steps=4 format=3 uid="uid://bb7j65g16mygs"]

[ext_resource type="Script" path="res://wheel-components/wheel_overlay.gd" id="1_jxgk0"]

[sub_resource type="Gradient" id="Gradient_v8edh"]
interpolation_mode = 1
colors = PackedColorArray(1, 1, 1, 1, 0.775063, 0.775063, 0.775064, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ft0xd"]
gradient = SubResource("Gradient_v8edh")
fill_to = Vector2(0, 0.5)

[node name="WheelOverlay" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_jxgk0")
num_borders = 4
radius = 100.0
outer_border_thickness = 10.0
inner_border_thickness = 5.0
outer_border_texture = SubResource("GradientTexture2D_ft0xd")

[node name="BorderParent" type="Control" parent="."]
unique_name_in_owner = true
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 1

[node name="OuterBorder" type="Line2D" parent="BorderParent"]
unique_name_in_owner = true
points = PackedVector2Array(-100, 8.74228e-06, -99.4335, -10.6293, -97.7403, -21.1383, -94.9398, -31.4077, -91.0635, -41.3212, -86.1554, -50.7666, -80.2712, -59.6367, -73.4774, -67.8312, -65.8512, -75.2571, -57.4788, -81.8303, -48.4551, -87.4763, -38.8824, -92.1312, -28.8692, -95.7422, -18.5289, -98.2684, -7.97863, -99.6812, 2.66204, -99.9646, 13.2725, -99.1153, 23.7327, -97.143, 33.9239, -94.0701, 43.7307, -89.9313, 53.0421, -84.7735, 61.7525, -78.6552, 69.7632, -71.6457, 76.9834, -63.8245, 83.3314, -55.28, 88.7352, -46.1093, 93.1337, -36.4161, 96.4768, -26.3103, 98.7269, -15.9064, 99.8583, -5.32224, 99.8583, 5.3222, 98.7269, 15.9063, 96.4769, 26.3103, 93.1337, 36.4161, 88.7353, 46.1093, 83.3315, 55.28, 76.9835, 63.8245, 69.7632, 71.6457, 61.7525, 78.6552, 53.0422, 84.7735, 43.7308, 89.9313, 33.9239, 94.0701, 23.7327, 97.1431, 13.2726, 99.1154, 2.66207, 99.9647, -7.97861, 99.6813, -18.5289, 98.2685, -28.8692, 95.7423, -38.8824, 92.1313, -48.4551, 87.4764, -57.4788, 81.8304, -65.8512, 75.2572, -73.4775, 67.8313, -80.2713, 59.6368, -86.1555, 50.7667, -91.0636, 41.3213, -94.9399, 31.4077, -97.7405, 21.1383, -99.4336, 10.6294, -100, 1.62125e-05)
texture = SubResource("GradientTexture2D_ft0xd")
texture_mode = 1
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="CoverParent" type="Control" parent="."]
unique_name_in_owner = true
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 1

[node name="SelectorParent" type="Control" parent="."]
unique_name_in_owner = true
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 1
